--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1065,7 +1065,7 @@ LeadSummaryScreen As screen:
                             PaddingTop: =0
                             Size: =24
                             Text: =Parent.Error
-                            Visible: =Parent.DisplayMode=DisplayMode.Edit
+                            Visible: =false
                             Width: =Parent.Width - 60
                             X: =30
                             Y: =IntxtNotesLSS.Y + IntxtNotesLSS.Height
@@ -1078,9 +1078,7 @@ LeadSummaryScreen As screen:
                             PaddingTop: =15
                             Size: =21
                             Text: ="*"
-                            Visible: |-
-                                =//And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
-                                true
+                            Visible: =false
                             Width: =30
                             Wrap: =false
                             X: =5
@@ -1146,7 +1144,7 @@ LeadSummaryScreen As screen:
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: ="Unit down"
                             Width: =Parent.Width-60
-                            X: =40
+                            X: =20
                             ZIndex: =5
 
                     AdditionalExpensesRequiredLSS As typedDataCard.comboBoxOptionSetSingleEditCard:
@@ -1212,7 +1210,7 @@ LeadSummaryScreen As screen:
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: ="Additional expenses required"
                             Width: =Parent.Width-60
-                            X: =40
+                            X: =20
                             ZIndex: =5
 
                     TotalEstimatedExpenseLSS As typedDataCard.textualEditCard:
@@ -1372,7 +1370,7 @@ LeadSummaryScreen As screen:
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: ="Travel required"
                             Width: =Parent.Width-60
-                            X: =40
+                            X: =20
                             ZIndex: =5
 
                     TotalEstimatedHoursofTravelLSS As typedDataCard.textualEditCard:
@@ -1534,7 +1532,7 @@ LeadSummaryScreen As screen:
                             Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                             Text: ="Communicated to customer"
                             Width: =Parent.Width-60
-                            X: =40
+                            X: =20
                             ZIndex: =5
 
                     CustomerNameLSS As typedDataCard.textualEditCard:
@@ -1973,7 +1971,7 @@ LeadSummaryScreen As screen:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
                 FillPortions: =0
-                Height: =If(Parent.Width<500,60,80)
+                Height: =If(Parent.Width<500,80,60)
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
@@ -1984,7 +1982,7 @@ LeadSummaryScreen As screen:
                 imgNotificationLSS As image:
                     Height: =Parent.Height
                     Image: =If(VarNotificationloding,'waiting-icon-gif-4',VarNotificationSuccess,Group)
-                    PaddingTop: =40
+                    PaddingTop: =30
                     Width: =Parent.Width
                     ZIndex: =1
 
@@ -2157,7 +2155,7 @@ LeadSummaryScreen As screen:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.None
                 FillPortions: =0
-                Height: =If(Parent.Width<500,60,80)
+                Height: =If(Parent.Width<500,80,60)
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutMinHeight: =100
                 LayoutMinWidth: =250
@@ -2168,7 +2166,7 @@ LeadSummaryScreen As screen:
                 imgNotificationLSS_1 As image:
                     Height: =Parent.Height
                     Image: =error
-                    PaddingTop: =40
+                    PaddingTop: =30
                     Width: =Parent.Width
                     ZIndex: =1
 
