--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -799,16 +799,18 @@ SubmittedLeadScreen As screen:
                     FocusedBorderThickness: =2
                     Font: =Font.Arial
                     HoverFill: =RGBA(0, 0, 0, 0)
-                    IsSearchable: =false
+                    InputTextPlaceholder: ="Find leads"
                     Items: |-
                         =//["Tracking number" As , "Created On", "Building Name","Contract Number"]
-                        ["Created Date","QQ Team Name","Mechanic Name","Contract No.","Lead Tracking No.","Building Name","Address"]
+                        ["Created Date","Contract number","Lead Tracking No.","Building Name","Address"]
                     OnChange: |-
                         =UpdateContext({locInfoExpanded:true})
                     PressedColor: =RGBA(0, 0, 0, 1)
                     PressedFill: =RGBA(0, 0, 0, 0)
                     SearchFields: =["Value"]
-                    SearchItems: =[]
+                    SearchItems: |-
+                        =Search(//["Tracking number" As , "Created On", "Building Name","Contract Number"]
+                        ["Created Date","Contract number","Lead Tracking No.","Building Name","Address"],ComboBox1.SearchText,"Value")
                     SelectionColor: =RGBA(0, 0, 0, 1)
                     SelectionFill: =RGBA(237, 237, 237, 1)
                     SelectMultiple: =false
